Set body margin to 0px;

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,7 +125,8 @@ header
 
 body
 {
-    background-image: url("../images/beige-tiles.png")
+    background-image: url("../images/beige-tiles.png");
+    margin: 0px;
 }
 
 input[type=text], [type=email] {
