--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,9 @@
     width: 960px;
     color: #777777;
     font-family: Arial, Helvetica, sans-serif;
+
+    position: relative;
+    min-height: 100vh;
   }
 
   .mainsection
@@ -18,12 +21,7 @@
       margin-bottom: 30px;
       background-color: #ffffff;
   }
-  .content
-  {
-  
 
-
-  }
   .name
   {
       font-family: Georgia, 'Times New Roman', Times, serif;
@@ -48,6 +46,9 @@
       background: #666666;
       height: 50px;
       border-top: 7px solid #4aaaa5;
+      width: 100%;
+      bottom: 0;
+      position: absolute;
   }
   .menu
   {
